--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "https://github.com/pvorb/node-pdc/issues"
   },
   "main": "./pdc.js",
+  "types": "./pdc.d.ts",
   "engines": {
     "node": ">=0.6.0"
   },
@@ -25,6 +26,8 @@
     }
   ],
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^8.0.17"
+  },
   "optionalDependencies": {}
 }
